--- a/css/estilo.css
+++ b/css/estilo.css
@@ -28,6 +28,9 @@
     align-items: center;
     text-align: center ;
     border: solid black 3px;
+    position: sticky;
+    top: 0;
+    background-color: gray;
     
   
 }
@@ -56,6 +59,7 @@ h1{
     border: solid black 3px;
     line-height:0;
     background-color: #4f5153;
+    
     }
 .nav ul{
     font-family: 'Ubuntu', sans-serif;
@@ -233,7 +237,7 @@ textarea{
 /* siempre al final */
 @media only screen and (max-width: 600px){
     
-    .contenedor {  display: grid;
+   /* .contenedor {  display: grid;
         grid-template-columns: 0fr 0.3fr 1.2fr;
         grid-template-rows: 0.5fr 0.5fr 1.6fr 0.4fr;
         gap: 0px 0px;
@@ -254,6 +258,18 @@ textarea{
       .aside { grid-area: aside; }
       
       .footer { grid-area: footer; }
+    
+    */
+
+    .header{
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top:0;
+        padding: 100px 0px;
+        z-index: 100;
+    }
       
 
 }
